src/objects/Answer__c.object
<CustomObject>
    <description>Answer records to Question records.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Related Account record.</description>
        <inlineHelpText>Related Account record.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Answer_Statement__c</fullName>
        <description>Answer value.</description>
        <inlineHelpText>Answer value.</inlineHelpText>
        <label>Answer Statement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Related Question record.</description>
        <inlineHelpText>Related Question record.</inlineHelpText>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>Answer</label>
    <nameField>
        <displayFormat>Answ-{0000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>